--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </ol>
           <div class="carousel-inner iny">
             <div class="carousel-item active">
-              <img src="zenon-images/zenon15.jpg" class="wideee" alt="...">
+              <img src="zenon15.jpg" class="wideee" alt="...">
               <div class="carousel-caption dremo ">
                 <h5>Creativity Is In The Mind</h5>
                 <p class="dremo2">orem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="zenon-images/zenon9.jpg" class="wideee" alt="...">
+              <img src="zenon9.jpg" class="wideee" alt="...">
               <div class="carousel-caption dremo ">
                 <h5>Emblem Of Photography</h5>
                 <p class=" dremo2">lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="zenon-images/zenon4.jpg" class="wideee" alt="...">
+              <img src="zenon4.jpg" class="wideee" alt="...">
               <div class="carousel-caption dremo ">
                 <h5>Deciphering Alterations</h5>
                 <p class="dremo2">ipsum dolor sit amet consectetur adipisicing elit. 
