--- a/services.html
+++ b/services.html
@@ -122,9 +122,9 @@
                 <div class="carousel-item active">
                     <div class="container text-center">
                         <div class="row">
-                          <div class="col-md-4 call2"><img src="zenon-images/zenon11.jpeg" alt="" id="testimages"></div>
-                       <div class="col-md-4 call2"><img src="zenon-images/zenon8.jpg" alt="" id="testimages"></div>
-                        <div class="col-md-4 call2"><img src="zenon-images/zenon14.jpg" alt="" id="testimages"></div>
+                          <div class="col-md-4 call2"><img src="zenon11.jpeg" alt="" id="testimages"></div>
+                       <div class="col-md-4 call2"><img src="zenon8.jpg" alt="" id="testimages"></div>
+                        <div class="col-md-4 call2"><img src="zenon14.jpg" alt="" id="testimages"></div>
                         </div>
                     </div>
                     
@@ -136,9 +136,9 @@
                 <div class=" carousel-item ">
                     <div class="container text-center">
                       <div class="row">
-                        <div class="col-md-4 call2"><img src="zenon-images/zenon16.jpg" alt="" id="testimages"></div>
-                      <div class="col-md-4 call2"><img src="zenon-images/zenon17.jpg" alt="" id="testimages"></div>
-                       <div class="col-md-4 call2"><img src="zenon-images/zenon13.jpeg" alt="" id="testimages"></div>
+                        <div class="col-md-4 call2"><img src="zenon16.jpg" alt="" id="testimages"></div>
+                      <div class="col-md-4 call2"><img src="zenon17.jpg" alt="" id="testimages"></div>
+                       <div class="col-md-4 call2"><img src="zenon13.jpeg" alt="" id="testimages"></div>
                       </div>
                     </div>
                     
