--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
            <div class="bord">
-            <img src="zenon-images/zenon12.jpeg" alt="" id="team-images" class="text-center">
+            <img src="zenon12.jpeg" alt="" id="team-images" class="text-center">
             <p><h5>AZEEM  TIVE</h5></p>
             <p>Event Photographer</p>
             <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">    <a href="#"><button type="submit">View</button></a></span>
@@ -75,7 +75,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
             <div class="bord">
-             <img src="zenon-images/zenon1.jpg" alt="" id="team-images" class="text-center">
+             <img src="zenon1.jpg" alt="" id="team-images" class="text-center">
              <p><h5>TRACY EILLANO</h5></p>
              <p>Product Photographer</p>
              <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">   <a href="#"><button type="submit">View</button></a></span>
@@ -86,7 +86,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
             <div class="bord">
-             <img src="zenon-images/zenon4.jpg" alt="" id="team-images" class="text-center">
+             <img src="zenon4.jpg" alt="" id="team-images" class="text-center">
              <p><h5>GILLMAN FEZOZ</h5></p>
              <p>Modelling Photographer</p>
              <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">   <a href="#"><button type="submit">View</button></a></span>
@@ -102,7 +102,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
             <div class="bord">
-             <img src="zenon-images/zenon10.jpg" alt="" id="team-images" class="text-center">
+             <img src="zenon10.jpg" alt="" id="team-images" class="text-center">
              <p><h5>SCOTT SAM</h5></p>
              <p>Food Photographer</p>
              <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">   <a href="#"><button type="submit">View</button></a></span>
@@ -114,7 +114,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
             <div class="bord">
-             <img src="zenon-images/zenon11.jpeg" alt="" id="team-images" class="text-center">
+             <img src="zenon11.jpeg" alt="" id="team-images" class="text-center">
              <p><h5>BILL FERGUSON</h5></p>
              <p>Beauty Photographer</p>
              <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">   <a href="#"><button type="submit">View</button></a></span>
@@ -126,7 +126,7 @@
         <div class="col-md-4 kink">
           <div class="box1">
             <div class="bord">
-             <img src="zenon-images/zenon13.jpeg" alt="" id="team-images" class="text-center">
+             <img src="zenon13.jpeg" alt="" id="team-images" class="text-center">
              <p><h5>PAUL WILL</h5></p>
              <p>Estate Photographer</p>
              <span class="part1" ><i class="fa fa-pencil "></i>   <a href="#">Assign</a></span><span class="part2">   <a href="#"><button type="submit">View</button></a></span>
